@@ -4,13 +4,14 @@
 \title{News for \R Package \pkg{copula}}% MM: look into ../svn-log-from.all
 \newcommand{\CRANpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
 
-\section{Changes in version 0.999-14 (2015-07-..)}{
+\section{Changes in version 0.999-14 (2015-08-..)}{
   \itemize{
     \item New demo "NALC" on nested Archimedean Levy copulas
     \item Explicitly import from "base packages"
     \item \code{contour(<mvdc>, ..)} gets new default
     \code{box01=FALSE}, as a \eqn{[0,1]^2} box does not make sense for
     general multivariate distributions.
+    \item \code{coeffG()} is exported (though still partly subject to change)
   }
 }
 
